fix: mousemove cursor on mobile & card container rotation for mobile with js

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -370,7 +370,7 @@ header.visible span {
   border: 1px solid var(--black);
 }
 
-.card-container:hover .card {
+.card-container.rotate .card {
   transform: rotateY(180deg);
 }
 
